terraform/modules/network/sg.tf
resource "aws_security_group" "ssh_security_group" {
  name        = "ssh-security-group"
  description = "ssh Security Group"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "SSH from Internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ssh-security-group"
  }
}
