terraform/modules/network/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  #enable_dns_hostnames = true

  tags = {
    Name = "vpc"
  }
}

resource "aws_eip" "elastic_ip" {
  tags = {
    Name = "elastic-ip"
  }
}
